2005-10-29  Herbert Xu <herbert@gondor.apana.org.au>

	* Updated BSD licence to 3-clause version per NetBSD.
	* Updated copyright.
	* Removed CVS IDs and inclusion of sys/cdefs.h.
	* Removed use of __P from error.h.
	* Use bsd_signal if it exists and signal does not.
	* Stop using sysexits.h in commandcmd.
	* Use stat if stat64 does not exist.
	* Added default implementation of bsearch.
	* Added getpwhome as a wrapper for getpwnam.
	* Fixed gcc 4.0 compilation problems.
	* Added missing system.h inclusion for mempcpy.
	* Added default implementation of strsignal.
	* Added default implementation of killpg.
	* Disable ulimit if there is no getrlimit.
	* Disable histcmd completely when SMALL is defined.
	* Added default definition for SSIZE_MAX.
	* Removed standalone/csh support from printf.
	* Added dummy strtod implementation.
	* Removed standalone/csh support from test.
	* Added dummy sysconf implementation.
	* Include system.h for stpcpy in nodes.c.
	* Added out-of-line ctypes functions for klibc.
	* Fixed fallback stpcpy implementation.

2005-10-26  Herbert Xu <herbert@gondor.apana.org.au>

	* Size optimisations in preadbuffer().

2005-10-01  Herbert Xu <herbert@gondor.apana.org.au>

	* Skip NUL characters properly in input.c.

2005-03-28  Herbert Xu <herbert@gondor.apana.org.au>

	* Removed some unnecessary inclusions of input.h.
	* Removed unnecessary inclusion of main.h from eval.c.
	* Removed unnecessary inclusion of eval.h from parser.c.
	* Generalise setinputfile for use in read_profile/readcmdfile.
	* Handle SKIPEVAL in read_profile by exiting.
	* Let evaltree handle traps from cmdloop.
	* Reset evalskip after minusc is executed.
	* Stop executing traps once SKIPEVAL is seen.
	* Only handle each signal once in dotrap.

2005-03-25  Gerrit Pape <pape@smarden.org>

	* Add trailing equal sign in setvar for variables set to null.

2005-03-25  Herbert Xu <herbert@gondor.apana.org.au>

	* Cleaned up src/Makefile.am.
	* Get rid of duplicate -g -O2 in CFLAGS.