@@ -1,3 +1,7 @@
+2005-10-30  Herbert Xu <herbert@gondor.apana.org.au>
+
+	* Fixed support for disabling job control.
+
 2005-10-29  Herbert Xu <herbert@gondor.apana.org.au>
 
 	* Updated BSD licence to 3-clause version per NetBSD.
